check inventory and connect messages

--- a/app/templates/auth/purchase-detail.html
+++ b/app/templates/auth/purchase-detail.html
@@ -140,29 +140,19 @@
                         </div>
                     </div>
                     <hr>
-                    <div class="container">
+                    <div class="container hide-print">
                         <div class="row">
-                            <div class="items-dashboard" style="background-color:#f5f5f5">
+                            <div class="items-dashboard" style="background-color:#f5f5f5; width: 100%">
                                 <div class="container">
                                     <h4><i class="fa fa-comment"></i> Mensajes</h4>
                                 </div>
                                 <hr>
                                 <div class="container">
-                                    <div class="message-branch">
+                                    <div class="message-branch" ng-repeat=" message in Purchase.comments" ng-if="message.isActive === true">
                                         <p>
-                                            Lorem ipsum dolor sit amet consectetur adipiscing elit nullam mi rhoncus,
-                                            venenatis pretium maecenas vehicula et lacinia aptent leo primis iaculis ornare,
-                                            praesent diam sem egestas quam at morbi nam lacus.
+                                            {{message.comments}}
                                         </p>
-                                        <small>12/05/2018 - 8:00am</small>
-                                    </div>
-                                    <div class="message-branch">
-                                        <p>
-                                            Lorem ipsum dolor sit amet consectetur adipiscing elit nullam mi rhoncus,
-                                            venenatis pretium maecenas vehicula et lacinia aptent leo primis iaculis ornare,
-                                            praesent diam sem egestas quam at morbi nam lacus.
-                                        </p>
-                                        <small>12/05/2018 - 8:00am</small>
+                                        <small>Fecha: {{message.createdAt | date : 'short' }}</small>
                                     </div>
                                 </div>
                             </div>
