--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -76,9 +76,10 @@
                         <!--<a ui-sref="product-detail({slug:product.slug})" class="btn btn-outline-dark">Ver más</a>-->
                         <button class="btn btn-black"
                                 ng-click="Shop.setItem({id: product.id, image: product.featuredImage.url,
-                           name: product.name, price: product.price, qty: 1,taxonomies : product.taxonomies, shipmentPrice: product.shipmentPrice, typeTax: product.typeTax}, 1)"
-                                ng-disabled="Shop.itemInCart(product)">Agregar al carrito
+                           name: product.name, price: product.price, qty: 1,taxonomies : product.taxonomies, shipmentPrice: product.shipmentPrice, typeTax: product.typeTax, stock: product.inventory}, 1)"
+                                ng-disabled="Shop.itemInCart(product) || product.inventory <= 0 ">Agregar al carrito
                         </button>
+                        <span ng-if="product.inventory <= 0" style="font-size: 13px;"> Producto agotado</span>
                     </div>
                 </div>
             </div>
