ajuste de menu responsivo

--- a/app/css/core/components.styl
+++ b/app/css/core/components.styl
@@ -545,6 +545,8 @@
     color fontClr
   .box-widget-container
     padding 5px
+    .nav-link
+      color fontClr
     h3>a, h2>a
       font-size 14px
       color fontClr
