--- a/app/templates/shop/thanks.html
+++ b/app/templates/shop/thanks.html
@@ -5,9 +5,8 @@
                 <div class="thanks">
                     <h1>{{Thanks.title}}</h1>
                     <p>Si tienes alguna información adicional que quieras darnos contáctanos en chat de ayuda o en <br> <a
-                                href="mailto:hola@moons.mx"> <i class="fa fa-envelope"></i> hola@moons.mx</a> | <a
-                                href="tel:5558-9023"> <i class="fa fa-phone"></i> 5558-9023 </a> | <a href="tel:5701-0693"> <i class="fa fa-phone"></i> 5701-0693</a></p>
-                    <img src="img/back.png" alt="¡Vuelve pronto!">
+                            href="mailto:{{initConfig.email}}"> <i class="fa fa-envelope"></i> {{initConfig.email}}</a> | <a
+                            href="tel:{{initConfig.phone}}"> <i class="fa fa-phone"></i> {{initConfig.phone}} </a> </p>
                 </div>
             </div>
         </div>
