ajuste de etiqueta en el estado de compras de un usuario

--- a/app/css/core/components.styl
+++ b/app/css/core/components.styl
@@ -126,7 +126,9 @@
     background-color dark
     border 1px solid dark
     box-shadow 0 3px 10px rgba(0,0,0,0.3)
-
+.btn-xs.indicators
+  border-radius 50%
+  padding 0 5px
 //buttons bordered
 .bordered //add this class in your button to bordered
   border-radius 30px
