--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -32,10 +32,11 @@
                                                          price: product.price, qty: 1,
                                                          taxonomies : product.taxonomies,
                                                          shipmentPrice: product.shipmentPrice,
-                                                         typeTax: product.typeTax}, 1)"
-                                                    ng-disabled="Product.itemInCart(product)">
+                                                         typeTax: product.typeTax, stock: product.inventory}, 1)"
+                                                    ng-disabled="Product.itemInCart(product) || product.inventory <= 0 ">
                                                 Agregar al carrito
                                             </button>
+                                            <span ng-if="product.inventory <= 0" style="font-size: 13px;"> Producto agotado</span>
                                         </div>
                                     </div>
 
