--- a/app/templates/shop/shopcart.html
+++ b/app/templates/shop/shopcart.html
@@ -103,7 +103,7 @@
                                     </tr>
                                     <tr>
                                         <td>Envío</td>
-                                        <td>{{ShopCart.shipmentTotal | currency}}</td>
+                                        <td class="text-warning">Pendiente</td>
                                     </tr>
                                     <tr>
                                         <td>Total</td>
