ajuste de estilo lady paola

--- a/app/css/core/captions.styl
+++ b/app/css/core/captions.styl
@@ -26,28 +26,31 @@ figure.snip1190 *
     transition all 0.3s ease-in-out
 
 figure.snip1190 .img-caption 
-    opacity 0.8
+    opacity 1
     width 100%
 
 figure.snip1190 figcaption 
-    bottom 0
+    bottom 10%
     display block
     left 0
     position absolute
     right 0
-    top 0
 
 figure.snip1190 h2 
     font-weight 400
     left 0
     right 0
+    font-size 20px
     letter-spacing -1px
     margin 0 auto
     position absolute
     text-transform uppercase
-    bottom 50%
-    -webkit-transform translateY(50%)
-    transform translateY(50%)
+    bottom -31px
+    background-color black
+    vertical-align center
+    padding 28px
+    //-webkit-transform translateY(50%)
+    //transform translateY(50%)
 
 figure.snip1190 h2 span 
     font-weight 800
@@ -124,8 +127,8 @@ figure.snip1190.hover .img-caption
 figure.snip1190:hover h2,
 figure.snip1190.hover h2 
     opacity 1
-    -webkit-transform translateY(0px)
-    transform:translateY(0px)
+   // -webkit-transform translateY(0)
+   // transform:translateY(0)
 
 figure.snip1190:hover p,
 figure.snip1190.hover p 
