--- a/app/css/core/components.styl
+++ b/app/css/core/components.styl
@@ -251,7 +251,7 @@
   height 100px
   text-align center
   position relative
-  color black
+  color fontClr
   .text-content
     position absolute
     left 0
