--- a/app/css/layout/layout.styl
+++ b/app/css/layout/layout.styl
@@ -111,7 +111,7 @@ md-input-container
   /* SECTION THREE */
   .section-three
     text-align center
-    background-color white
+    background-color #afb1f9
     padding 40px 0
     p
       font-size 18px
@@ -413,3 +413,5 @@ footer
   md-content
     &._md
       max-height 240px
+
+      
