--- a/app/templates/product-detail.html
+++ b/app/templates/product-detail.html
@@ -24,10 +24,23 @@
                                 <div class="col-sm-12">
                                     <h1 class="text-uppercase">{{Product.detail.name}}</h1>
                                     <br>
-                                    <h2 class="article-price">{{ Product.detail.price | currency}}</h2>
+                                    <!--<h2 class="article-price">{{ Product.detail.price | currency}}</h2>-->
                                     <br>
                                 </div>
+                                <div class="col-sm-7">
+                                    <a href class="btn btn-default btn-block">
+                                        <i class="fa fa-info-circle"></i> ¿Cómo ser Mayorista?
+                                    </a>
+                                </div>
                                 <div class="col-sm-12">
+                                    <article class="box-description-detail-product">
+                                        <h4>Descripción</h4>
+                                        <hr>
+                                        <p class="prod-detail-descrip" ng-bind-html="Product.detail.description | trustHtml">
+                                            {{Product.detail.description}}</p>
+                                    </article>
+                                </div>
+                                <!--<div class="col-sm-12">
                                     <form name="FormQty">
                                         <div class="row">
                                             <ng-include style="width:100%" src="'/templates/partials/options-group.html'"></ng-include>
@@ -55,17 +68,10 @@
                                         carrito
                                     </button>
                                 </div>
+                                -->
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-sm-12">
-                    <article class="box-description-detail-product">
-                        <h4>Descripción</h4>
-                        <hr>
-                        <p class="prod-detail-descrip" ng-bind-html="Product.detail.description | trustHtml">
-                            {{Product.detail.description}}</p>
-                    </article>
                 </div>
             </article>
         </div>
