--- a/app/templates/single.html
+++ b/app/templates/single.html
@@ -17,10 +17,9 @@
         <div class="row">
             <div class="col-md-8 col-sm-8">
                 <div class="title-middle-line">
-                    <div class="text-content">
-                        <h4 class="text-uppercase">{{ Post.detail.title }}</h4>
+                    <div class="text-left">
+                        <h3 class="text-uppercase">{{ Page.detail.title }}</h3>
                     </div>
-                    <hr>
                 </div>
 
                 <div class="content-post">
