--- a/app/css/core/components.styl
+++ b/app/css/core/components.styl
@@ -193,7 +193,7 @@
   .box-footer
     text-align center
   &:hover
-    box(15px, 0 4px 20px rgba(0,0,0,0.2), 1px solid #f5f5f5, 3px)
+    box(15px, 0 4px 20px rgba(0,0,0,0), 1px solid transparent, 3px)
 
 .box-default
   @extend .box
