--- a/app/css/main.css
+++ b/app/css/main.css
@@ -471,8 +471,8 @@ audio:not([controls]),
 }
 .box-simple:hover {
   padding: 15px;
-  box-shadow: 0 4px 20px rgba(0,0,0,0.2);
-  border: 1px solid #f5f5f5;
+  box-shadow: 0 4px 20px rgba(0,0,0,0);
+  border: 1px solid transparent;
   border-radius: 3px;
 }
 .box-default {
@@ -777,7 +777,7 @@ audio:not([controls]),
   background-position: center;
   background-size: 100%;
   background-repeat: no-repeat;
-  height: 600px;
+  height: 500px;
 }
 .tab-simple {
   border: 1px solid #ddd;
