--- a/app/templates/partials/block-ui.html
+++ b/app/templates/partials/block-ui.html
@@ -1,14 +1,21 @@
 <div class="block-ui-overlay"></div>
 <div class="block-ui-message-container" aria-live="assertive" aria-atomic="true">
     <div class="block-ui-message" ng-class="$_blockUiMessageClass">
-        <img width="250px" src="img/logo.png" alt="Moneek"/>
-        <div class="loader-container">
-            <div class="loader">
-                <span></span>
-                <span></span>
-                <span></span>
-                <span></span>
-            </div>
+        <img width="120px" src="img/logo.png" alt="Moneek"/>
+        <br>
+        <div class="lds-spinner">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
         </div>
     </div>
 </div>
