--- a/app/css/core/components.styl
+++ b/app/css/core/components.styl
@@ -182,11 +182,12 @@
     text-align left
     margin-bottom 15px
     padding-top 15px 
-    height 80px
-    border-bottom 1px solid #ddd
+    margin-top 15px 
+    height 70px
+    border-top 1px solid #ddd
     .box-title
       font-weight bold
-      font-size 12px
+      font-size 16px
     p
       height 50px
       padding 10px 0
