--- a/app/css/main.css
+++ b/app/css/main.css
@@ -72,9 +72,8 @@ audio:not([controls]),
   color: #fff;
 }
 .one-rows-nav .first-row .nav-link {
-  font-size: 14px;
+  font-size: 12px;
   color: #fff;
-  text-transform: uppercase;
   padding: 15px 8px;
 }
 .one-rows-nav md-input-container {
@@ -455,12 +454,13 @@ audio:not([controls]),
   text-align: left;
   margin-bottom: 15px;
   padding-top: 15px;
-  height: 80px;
-  border-bottom: 1px solid #ddd;
+  margin-top: 15px;
+  height: 70px;
+  border-top: 1px solid #ddd;
 }
 .box-simple .box-container .box-title {
   font-weight: bold;
-  font-size: 12px;
+  font-size: 16px;
 }
 .box-simple .box-container p {
   height: 50px;
@@ -1446,6 +1446,80 @@ figure.effect-sadie:hover a {
   right: 0;
   top: 0;
 }
+.lds-spinner {
+  color: official;
+  display: inline-block;
+  position: relative;
+  top: 30px;
+  left: 30px;
+  right: 0;
+  margin: 0 auto;
+  width: 64px;
+  height: 64px;
+}
+.lds-spinner div {
+  transform-origin: 32px 32px;
+  animation: lds-spinner 1.2s linear infinite;
+}
+.lds-spinner div:after {
+  content: " ";
+  display: block;
+  position: absolute;
+  top: 3px;
+  left: 29px;
+  width: 5px;
+  height: 14px;
+  border-radius: 20%;
+  background: #000;
+}
+.lds-spinner div:nth-child(1) {
+  transform: rotate(0deg);
+  animation-delay: -1.1s;
+}
+.lds-spinner div:nth-child(2) {
+  transform: rotate(30deg);
+  animation-delay: -1s;
+}
+.lds-spinner div:nth-child(3) {
+  transform: rotate(60deg);
+  animation-delay: -0.9s;
+}
+.lds-spinner div:nth-child(4) {
+  transform: rotate(90deg);
+  animation-delay: -0.8s;
+}
+.lds-spinner div:nth-child(5) {
+  transform: rotate(120deg);
+  animation-delay: -0.7s;
+}
+.lds-spinner div:nth-child(6) {
+  transform: rotate(150deg);
+  animation-delay: -0.6s;
+}
+.lds-spinner div:nth-child(7) {
+  transform: rotate(180deg);
+  animation-delay: -0.5s;
+}
+.lds-spinner div:nth-child(8) {
+  transform: rotate(210deg);
+  animation-delay: -0.4s;
+}
+.lds-spinner div:nth-child(9) {
+  transform: rotate(240deg);
+  animation-delay: -0.3s;
+}
+.lds-spinner div:nth-child(10) {
+  transform: rotate(270deg);
+  animation-delay: -0.2s;
+}
+.lds-spinner div:nth-child(11) {
+  transform: rotate(300deg);
+  animation-delay: -0.1s;
+}
+.lds-spinner div:nth-child(12) {
+  transform: rotate(330deg);
+  animation-delay: 0s;
+}
 @-moz-keyframes sk-circleBounceDelay {
   0%, 80%, 100% {
     -webkit-transform: scale(0);
@@ -1812,6 +1886,38 @@ figure.effect-sadie:hover a {
   100% {
     transform: scale(1);
     margin: 0px;
+  }
+}
+@-moz-keyframes lds-spinner {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+@-webkit-keyframes lds-spinner {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+@-o-keyframes lds-spinner {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+@keyframes lds-spinner {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
   }
 }
 @media print {
