--- a/app/templates/product-detail.html
+++ b/app/templates/product-detail.html
@@ -18,17 +18,16 @@
         <div class="container">
             <article class="row">
                 <div class="col-sm-4">
-                    <div class="owl-carousel owl-theme owl-theme-page">
-                        <div class="slider" ng-repeat="slide in Product.detail.galleryImages" ng-repeat-owl-carousel
-                             carousel-init="Product.carouselDetailProduct">
+                    <data-owl-carousel class="owl-carousel owl-theme owl-theme-page" data-options="Product.owlOptionProduct" ng-if="Product.detail.galleryImages.length > 0">
+                        <div owl-carousel-item class="slider" ng-repeat="slide in Product.detail.galleryImages">
                             <div class="item" style="width: 100%;">
                                 <a post-link="{ link: {url: slide.link, target: '_self'} }">
                                     <div class="slider-page"
-                                         style="background-image:url('{{ slide.attached_file ? slide.attached_file : initConfig.img_default }}');"></div>
+                                         style="background-image:url('{{ slide.url ? slide.url : initConfig.img_default }}');"></div>
                                 </a>
                             </div>
                         </div>
-                    </div>
+                    </data-owl-carousel>
                     <div class="bg-image-single" ng-if="Product.detail.galleryImages.length < 1"
                          style="background-image:url('{{ Product.detail.featuredImage.url }}');"></div>
                 </div>
@@ -37,7 +36,7 @@
                         <div class="container">
                             <div class="row">
                                 <div class="col-sm-6">
-                                    <h4>{{Product.detail.name}}..</h4>
+                                    <h4>{{Product.detail.name}}..{{Product.detail.galleryImages.length}}</h4>
                                     <br>
                                     <h2 class="article-price">{{ Product.detail.price | currency}}</h2>
                                     <span ng-if="Product.detail.inventory <= 0" style="font-size: 13px;"> Producto agotado</span>
