changue name form registro

--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -40,7 +40,7 @@
                                 </div>
                             </form>
                         </uib-tab>
-                        <uib-tab index="1" heading="Registrarme">
+                        <uib-tab index="1" heading="Registro de Minoristas">
                             <form class="padding" name="registerForm" ng-submit="Access.createAccount()" novalidate>
                                 <md-input-container md-no-float>
                                     <input type="text" ng-model="Access.formData.contactPersonName"
@@ -313,7 +313,7 @@
                                 </div>
                             </form>
                         </uib-tab>
-                        <uib-tab index="2" heading="Mayoristas" md-active="Access.wholesale">
+                        <uib-tab index="2" heading="Registro de Mayoristas" md-active="Access.wholesale">
                             <form class="padding" name="registerFormWholesale" ng-submit="Access.createAccount()"
                                   novalidate>
                                 <md-input-container md-no-float>
